--- a/web/src/components/task-drawer/index.module.css
+++ b/web/src/components/task-drawer/index.module.css
@@ -174,6 +174,15 @@
   border-radius: 4px;
 }
 
+.commitLink {
+  text-decoration: none;
+}
+
+.commitLink:hover .commitHash {
+  background-color: rgba(88, 166, 255, 0.15);
+  color: #58a6ff;
+}
+
 .drawerActions {
   margin-top: 8px;
   padding-top: 16px;
